fixing shiftrecord styles

--- a/src/app/styles/variables.css
+++ b/src/app/styles/variables.css
@@ -1,5 +1,6 @@
 :root {
   --color-background-primary: #0d1117;
+  --color-background-primary-hover: #1f2937;
   --color-background-secondary: #161b22;
   --color-background-buttons: #238636;
   --color-background-buttons-hover: #2ea043;
